# query_my_data

./: README.md  notes.txt  pyproject.toml
app/: app.py  config.py
app/db/: client_orm.py
app/helper/: llm.py
app/service/: Spreadsheet.py
