[project]
name = "query-my-data"
version = "0.1.0"
description = ""
authors = [
    {name = "M S Rahul Saj",email = "rahulsaj07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.18,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
